--- a/index.html
+++ b/index.html
@@ -486,5 +486,21 @@
         </div>
       </div>
     </div>
+    <section id="mapsec">
+      <h1 style="text-align: center;"> Visita nuestra tienda!</h1>
+      <p style="text-align: center;">Para compras presenciales o retiro en tienda, ven a visitarnos en nuestra tienda física en Álvarez 2336, 2571188 Viña del Mar, Valparaíso. Te esperamos con ansias!</p>
+      <div id="map"></div>
+
+      <script src="apigooglemap.JS">
+      </script>
+  
+    
+    </section>
+
+    <script a sync src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDnJ7HU3CttyubCqebQz5aVPMKZVmCybWI&callback=IniciarMapa">
+    </script>
+
+    <footer data-bs-theme="dark">©2024 DUOC UC</footer>
+
   </body>
 </html>
