--- a/perfil_usuario.html
+++ b/perfil_usuario.html
@@ -156,7 +156,7 @@
                             </div>
                             <div class="my-2">
                               <label for="password1" class="form-label">Contrase&ntilde;a</label>
-                              <input type="password" class="form-control" id="password1" placeholder="Ingresa Contraseña">
+                              <input type="password" class="form-control" id="password1" placeholder="Ingresa Contraseña"  min="8" maxlength="25">
                               <span id="spancontra"  style="color: red;" style="font-size: 14px ;" style="font-family: Arial, Helvetica, sans-serif;"></span> 
                             </div>
                             <div class="text-end">
